Fix time indicator missing on mobile

--- a/src/static/audioPlayer.css
+++ b/src/static/audioPlayer.css
@@ -23,7 +23,9 @@
 .progress-bar {
     height: 5px;
     width: 73%;
-    margin: 6% auto;
+    align-self: center;
+    margin-left: 0.5rem;
+    margin-right: 0.5rem;
     background: #9abde2;
     border-radius: 10px;
     font-family: "Questrial", sans-serif;
@@ -39,16 +41,6 @@
     cursor: pointer;
     color: #456990;
     font-size: 10px;
-    position: absolute;
-    margin-top: -2px;
-}
-
-.time--current {
-    left: 23px;
-}
-
-.time--total {
-    right: 23px;
 }
 
 .currently-playing {
@@ -94,6 +86,14 @@
 .controls .shuffle {
     margin-left: 30px;
     font-size: 1em;
+}
+
+.progress-bar-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
 }
 
 .progress-bar:hover {
